scroll fix
anchor tags now scroll to a position that doesnt result in the navbar
covering the start of the content.

--- a/css/mohanbs-stylesheet.css
+++ b/css/mohanbs-stylesheet.css
@@ -13,6 +13,7 @@ html,body {
     overflow:auto;
     overflow:initial;
     background-color: whitesmoke;
+    padding-top: 20px;
 }
 
 hr { 
@@ -371,7 +372,7 @@ hr {
 /*//////SERVICES/////*/
 
 #services-title{
-    margin: 1rem auto 1rem auto;
+    margin: 0 auto 1rem auto;
     color: #732534;
 }
 
